Remove blue line next to author and date, fix alignment of update delete remove list

--- a/src/app.scss
+++ b/src/app.scss
@@ -141,4 +141,5 @@
 	flex-direction: column;
 	justify-content: space-between;
 	height: 85%;
+	width: 80%;
 }
